--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
             <div class="menu-lives">
                 <img src="src/imagens/player.png" alt="foto do jogador" height="60px">
-                <h2>x3</h2>
+                <h2 id="live">x3</h2>
             </div>
         </div>
         <div class="painel">
